<resources>

    <string name="app_name">Green_Class</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Green_Class v1.0</string>
    <string name="xn">学年</string>
    <string name="xq">学期</string>
    <string name="start_search">开始查询</string>
    <string name="gpa">GPA(必修)</string>
    <string name="gpa_show">0.0</string>
    <string name="xx">选修</string>
    <string name="kcxz">课程性质</string>
    <string name="xf">学分</string>
    <string name="xf_exam">2.0</string>
    <string name="jd">绩点</string>
    <string name="jd_exam">3.7</string>
    <string name="kcdm">课程代码</string>
    <string name="dm_exm">104451</string>
    <string name="ksxy">开设学院</string>
    <string name="ksxy_exam">外国语言文学学院</string>
    <string name="ksxz">考试性质</string>
    <string name="ksxz_exam">正常考试</string>
    <string name="empty"></string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
</resources>
