<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightyellow"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/week_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/xn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/xn"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue" />

        <Spinner
            android:id="@+id/xns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/xq_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/xq"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue" />

    <Spinner
        android:id="@+id/xqs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>
</LinearLayout>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/grade_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:layout_below="@+id/do_search"
        android:layout_marginTop="5dp" />
    <Button
        android:id="@+id/do_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/week_show"
        android:background="@drawable/white_bg"
        android:text="@string/start_search"
        android:textColor="@color/darkgreen"
        />

    <Button
        android:id="@+id/GPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/week_show"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_bg"
        android:text="@string/gpa"
        android:textColor="@color/darkgreen" />

    <TextView
        android:id="@+id/show_gpa"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grade_list"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/GPA"
        android:background="@drawable/edit_shape"
        android:gravity="center"
        android:text="@string/gpa_show"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</RelativeLayout>